# IT-Brains-Lessons

./: .gitignore
Module №1. Python Basics/2. Основні типи даних та операції/: 1-2.py
Module №1. Python Basics/3. Булевий тип даних та умовні конструкції/: 1-3.py
Module №1. Python Basics/4. Колекції та структури даних/: 1-4.py
Module №1. Python Basics/5. Цикли/: Task 1.py  Task 10.py  Task 11.py  Task 12.py  Task 13.py  Task 2.py  Task 3.py  Task 4.py  Task 5.py  Task 6.py  Task 7.py  Task 8.py  Task 9.py  Tasks.md
Module №1. Python Basics/6. Функції/: Task 1.py  Task 10.py  Task 11.py  Task 12.py  Task 13.py  Task 14.py  Task 15.py  Task 16.py  Task 2.py  Task 3.py  Task 4.py  Task 5.py  Task 6.py  Task 7.py  Task 8.py  Task 9.py  Tasks.md
Module №1. Python Basics/7. Linting та Debag/: Task 1.py
Module №4. HTML-CSS/: index.html  style.css
Module №5. WEB-dev/7. Django Rest Framework/: pyproject.toml
Module №5. WEB-dev/7. Django Rest Framework/address_book/: .env-example  manage.py
Module №5. WEB-dev/7. Django Rest Framework/address_book/address_book/: asgi.py  settings.py  urls.py  wsgi.py
Module №5. WEB-dev/7. Django Rest Framework/address_book/contacts/: models.py  serializers.py  urls.py  views.py
Module №5. WEB-dev/7. Django Rest Framework/address_book/contacts/migrations/: 0001_initial.py  0002_event.py  0003_delete_event.py
Module №5. WEB-dev/7. Django Rest Framework/address_book/events/: models.py  serializers.py  urls.py  views.py
Module №5. WEB-dev/7. Django Rest Framework/address_book/events/migrations/: 0001_initial.py
(+75 files in other folders)
